# terraform-rag-system

./: .gitignore  README.md  pyproject.toml
infra/: backends.tf
scripts/: build_index.py
src/terraform_rag/ingestion/: chunker.py  embedder.py  loader.py
src/terraform_rag/retrieval/: retriever.py  vector_store.py
tests/: test_retrieval.py
