[project]
name = "terraform-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter",
    "openai>=1.0",
    "chromadb",
    "python-dotenv",
    "sentence-transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
